<resources>
    <string name="app_name">Artist App</string>
    <string name="email">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_text">Login</string>
    <string name="artist">ARTISTS</string>
    <string name="album">ALBUMS</string>
    <string name="error_label">Error</string>
    <string name="error_wrong_pw_msg">Email or password is invalid</string>
    <string name="label_name">Name:</string>
    <string name="detailArtist">Detail Artist</string>
    <string name="detailAlbum">Detail Album</string>
    <string name="label_country">Country:</string>
    <string name="genres">Genres:</string>
    <string name="log_out">Log out</string>
    <string name="label_artist">Artist:</string>
    <string name="length">Length</string>
    <string name="released">Released</string>
    <string name="media_url">https://aredir.nixcdn.com/NhacCuaTui1010/TinhBanDieuKy-AMeeRickyStarLangLD-6927558.mp3</string>
    <string name="you_might_like">YOU MIGHT LIKE</string>
    <string name="album_songs">LIST SONG</string>


</resources>