<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="150dp" >

                <ImageView
                    android:id="@+id/image"
                    android:background="#ffff"
                    android:gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/avatar_default"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="#ececec">
                    <TextView
                        android:layout_width="52dp"
                        android:layout_height="50dp"
                        android:textSize="14sp"
                        android:gravity="start|center"
                        android:ellipsize="end"
                        android:textColor="#ececec"
                        android:text="@string/label_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/name"
                        android:textColor="#ececec"
                        android:textSize="14sp"
                        android:textAlignment="textStart"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="#ececec">
                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="52dp"
                        android:layout_height="50dp"
                        android:textSize="14sp"
                        android:gravity="start|center"
                        android:textColor="#ececec"
                        android:ellipsize="end"
                        android:text="@string/genres"/>

                    <TextView
                        android:id="@+id/responseText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textColor="#ececec"
                        android:textSize="14sp"
                        android:textAlignment="textStart"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="52dp"
                        android:layout_height="50dp"
                        android:textSize="14sp"
                        android:gravity="start|center"
                        android:textColor="#ececec"
                        android:ellipsize="end"
                        android:text="@string/label_country"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/responseText3"
                        android:textColor="#ececec"
                        android:textSize="14sp"
                        android:textAlignment="textStart"/>

                </LinearLayout>
        </LinearLayout>
     </LinearLayout>
</layout>